install-meta (0.1.21) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 16 Jun 2007 03:38:56 +0200

install-meta (0.1.20) unstable; urgency=low

  * Add debian menu entry. Build-Depend on imagemagick.

 -- Kel Modderman <kel@otaku42.de>  Sat, 16 Jun 2007 09:39:05 +1000

install-meta (0.1.19) unstable; urgency=low

  * Polish language packages added

 -- Horst Tritremmel <hjt@sidux.com>  Fri, 15 Jun 2007 08:48:21 +0200

install-meta (0.1.18) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * do not advocate partimage as recovery tool, it is utterly broken crap and
    mustn't be used.

  [ Horst Tritremmel ]
  * hide/show main window if installation is clicked 
  * end dialog window removed, this handles install-meta

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 14 Jun 2007 15:29:01 +0200

install-meta (0.1.17) unstable; urgency=low

  * Games and Non-free_Games update

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 06 Jun 2007 23:56:32 +0200

install-meta (0.1.16) unstable; urgency=low

  * make window smaller for 800x600 res

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 30 May 2007 09:40:51 +0200

install-meta (0.1.15) unstable; urgency=low

  * new iwlwifi package
  * new ipw3945:  Reverting back from iwlwifi-ucode

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 21 May 2007 21:43:03 +0200

install-meta (0.1.14) unstable; urgency=low

  * Croatian Language Pack update

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 21 May 2007 15:24:20 +0200

install-meta (0.1.13) unstable; urgency=low

  * delete a %s\n for fprintf 

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 16 May 2007 21:08:01 +0200

install-meta (0.1.12) unstable; urgency=low

  * fix the maintainer mail address.
  * remove obsolete fix-unionfs functionality.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 15 May 2007 13:21:38 +0200

install-meta (0.1.11) unstable; urgency=low

  * add a warning label

 -- Horst Tritremmel <hjt@sidux.com>  Fri, 11 May 2007 22:35:35 +0200
