@@ -378,58 +378,6 @@ or use   --dir=&lt;dir&gt;
       <property name="visible">True</property>
 
       <child>
-	<widget class="GtkLabel" id="label22">
-	  <property name="width_request">734</property>
-	  <property name="height_request">30</property>
-	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">&lt;span foreground=&quot;red&quot; font_desc=&quot;Sans Bold 12&quot;&gt;To use this feature, make sure you are connected to the internet.&lt;/span&gt;</property>
-	  <property name="use_underline">False</property>
-	  <property name="use_markup">True</property>
-	  <property name="justify">GTK_JUSTIFY_LEFT</property>
-	  <property name="wrap">False</property>
-	  <property name="selectable">False</property>
-	  <property name="xalign">0</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-	  <property name="width_chars">-1</property>
-	  <property name="single_line_mode">False</property>
-	  <property name="angle">0</property>
-	</widget>
-	<packing>
-	  <property name="x">8</property>
-	  <property name="y">28</property>
-	</packing>
-      </child>
-
-      <child>
-	<widget class="GtkLabel" id="label_install">
-	  <property name="width_request">401</property>
-	  <property name="height_request">32</property>
-	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Install additional metapackages</property>
-	  <property name="use_underline">False</property>
-	  <property name="use_markup">False</property>
-	  <property name="justify">GTK_JUSTIFY_LEFT</property>
-	  <property name="wrap">False</property>
-	  <property name="selectable">False</property>
-	  <property name="xalign">0</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-	  <property name="width_chars">-1</property>
-	  <property name="single_line_mode">False</property>
-	  <property name="angle">0</property>
-	</widget>
-	<packing>
-	  <property name="x">8</property>
-	  <property name="y">0</property>
-	</packing>
-      </child>
-
-      <child>
 	<widget class="GtkImage" id="image8">
 	  <property name="width_request">241</property>
 	  <property name="height_request">33</property>
@@ -782,7 +730,7 @@ or use   --dir=&lt;dir&gt;
 		  <child>
 		    <widget class="GtkViewport" id="viewport1">
 		      <property name="visible">True</property>
-		      <property name="shadow_type">GTK_SHADOW_IN</property>
+		      <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
 
 		      <child>
 			<widget class="GtkLabel" id="label19">
@@ -794,7 +742,9 @@ sidux contains &lt;b&gt;only dfsg free software&lt;/b&gt;, so you may want to ad
 
 You can add contrib and non-free sources with the button &lt;b&gt;&quot;Install non-free&quot;&lt;/b&gt;. This will add more metapackages.
 
-see non-free category &lt;/span&gt; </property>
+see non-free category &lt;/span&gt; 
+
+&lt;span foreground=&quot;Red&quot; font_desc=&quot;12&quot;&gt;firmware needs non-free&lt;/span&gt;</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1068,7 +1018,7 @@ see non-free category &lt;/span&gt; </property>
 	  <child>
 	    <widget class="GtkLabel" id="label17">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">&lt;b&gt;&lt;span color=&quot;darkgreen&quot;&gt;non-free sources&lt;/span&gt;&lt;/b&gt;</property>
+	      <property name="label" translatable="yes">&lt;b&gt;&lt;span color=&quot;SkyBlue4&quot;&gt;non-free sources&lt;/span&gt;&lt;/b&gt;</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1091,6 +1041,58 @@ see non-free category &lt;/span&gt; </property>
 	<packing>
 	  <property name="x">0</property>
 	  <property name="y">58</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkLabel" id="label22">
+	  <property name="width_request">734</property>
+	  <property name="height_request">30</property>
+	  <property name="visible">True</property>
+	  <property name="label" translatable="yes">&lt;span foreground=&quot;darkgreen&quot; font_desc=&quot;12&quot;&gt;To use this feature, make sure you are connected to the internet.&lt;/span&gt;</property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">True</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
+	</widget>
+	<packing>
+	  <property name="x">8</property>
+	  <property name="y">28</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkLabel" id="label_install">
+	  <property name="width_request">518</property>
+	  <property name="height_request">30</property>
+	  <property name="visible">True</property>
+	  <property name="label" translatable="yes">&lt;span foreground=&quot;SkyBlue4&quot; font_desc=&quot;14&quot;&gt;Install additional metapackages&lt;/span&gt;</property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">True</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
+	</widget>
+	<packing>
+	  <property name="x">8</property>
+	  <property name="y">0</property>
 	</packing>
       </child>
     </widget>
