@@ -214,8 +214,6 @@ create_window_main (void)
   GtkWidget *window_main;
   GdkPixbuf *window_main_icon_pixbuf;
   GtkWidget *fixed5;
-  GtkWidget *label22;
-  GtkWidget *label_install;
   GtkWidget *image8;
   GtkWidget *notebook1;
   GtkWidget *fixed6;
@@ -257,6 +255,8 @@ create_window_main (void)
   GtkWidget *image14;
   GtkWidget *label21;
   GtkWidget *label17;
+  GtkWidget *label22;
+  GtkWidget *label_install;
   GtkTooltips *tooltips;
 
   tooltips = gtk_tooltips_new ();
@@ -277,19 +277,6 @@ create_window_main (void)
   gtk_widget_show (fixed5);
   gtk_container_add (GTK_CONTAINER (window_main), fixed5);
   gtk_container_set_border_width (GTK_CONTAINER (fixed5), 10);
-
-  label22 = gtk_label_new (_("<span foreground=\"red\" font_desc=\"Sans Bold 12\">To use this feature, make sure you are connected to the internet.</span>"));
-  gtk_widget_show (label22);
-  gtk_fixed_put (GTK_FIXED (fixed5), label22, 8, 28);
-  gtk_widget_set_size_request (label22, 734, 30);
-  gtk_label_set_use_markup (GTK_LABEL (label22), TRUE);
-  gtk_misc_set_alignment (GTK_MISC (label22), 0, 0.5);
-
-  label_install = gtk_label_new (_("Install additional metapackages"));
-  gtk_widget_show (label_install);
-  gtk_fixed_put (GTK_FIXED (fixed5), label_install, 8, 0);
-  gtk_widget_set_size_request (label_install, 401, 32);
-  gtk_misc_set_alignment (GTK_MISC (label_install), 0, 0.5);
 
   image8 = create_pixmap (window_main, "install-meta-title.png");
   gtk_widget_show (image8);
@@ -403,8 +390,9 @@ create_window_main (void)
   viewport1 = gtk_viewport_new (NULL, NULL);
   gtk_widget_show (viewport1);
   gtk_container_add (GTK_CONTAINER (scrolledwindow6), viewport1);
+  gtk_viewport_set_shadow_type (GTK_VIEWPORT (viewport1), GTK_SHADOW_ETCHED_IN);
 
-  label19 = gtk_label_new (_("<span font_desc=\"11\"><b><u>Hints for hardware with non-free needs:</u></b>\n\nsidux contains <b>only dfsg free software</b>, so you may want to add <b>contrib</b> and <b>non-free </b>to your \n<b>/etc/apt/sources.list</b>.\n\nYou can add contrib and non-free sources with the button <b>\"Install non-free\"</b>. This will add more metapackages.\n\nsee non-free category </span> "));
+  label19 = gtk_label_new (_("<span font_desc=\"11\"><b><u>Hints for hardware with non-free needs:</u></b>\n\nsidux contains <b>only dfsg free software</b>, so you may want to add <b>contrib</b> and <b>non-free </b>to your \n<b>/etc/apt/sources.list</b>.\n\nYou can add contrib and non-free sources with the button <b>\"Install non-free\"</b>. This will add more metapackages.\n\nsee non-free category </span> \n\n<span foreground=\"Red\" font_desc=\"12\">firmware needs non-free</span>"));
   gtk_widget_show (label19);
   gtk_container_add (GTK_CONTAINER (viewport1), label19);
   gtk_label_set_use_markup (GTK_LABEL (label19), TRUE);
@@ -475,10 +463,24 @@ create_window_main (void)
   gtk_widget_show (label21);
   gtk_box_pack_start (GTK_BOX (hbox7), label21, FALSE, FALSE, 0);
 
-  label17 = gtk_label_new (_("<b><span color=\"darkgreen\">non-free sources</span></b>"));
+  label17 = gtk_label_new (_("<b><span color=\"SkyBlue4\">non-free sources</span></b>"));
   gtk_widget_show (label17);
   gtk_notebook_set_tab_label (GTK_NOTEBOOK (notebook1), gtk_notebook_get_nth_page (GTK_NOTEBOOK (notebook1), 1), label17);
   gtk_label_set_use_markup (GTK_LABEL (label17), TRUE);
+
+  label22 = gtk_label_new (_("<span foreground=\"darkgreen\" font_desc=\"12\">To use this feature, make sure you are connected to the internet.</span>"));
+  gtk_widget_show (label22);
+  gtk_fixed_put (GTK_FIXED (fixed5), label22, 8, 28);
+  gtk_widget_set_size_request (label22, 734, 30);
+  gtk_label_set_use_markup (GTK_LABEL (label22), TRUE);
+  gtk_misc_set_alignment (GTK_MISC (label22), 0, 0.5);
+
+  label_install = gtk_label_new (_("<span foreground=\"SkyBlue4\" font_desc=\"14\">Install additional metapackages</span>"));
+  gtk_widget_show (label_install);
+  gtk_fixed_put (GTK_FIXED (fixed5), label_install, 8, 0);
+  gtk_widget_set_size_request (label_install, 518, 30);
+  gtk_label_set_use_markup (GTK_LABEL (label_install), TRUE);
+  gtk_misc_set_alignment (GTK_MISC (label_install), 0, 0.5);
 
   g_signal_connect ((gpointer) window_main, "show",
                     G_CALLBACK (on_window_main_show),
@@ -517,8 +519,6 @@ create_window_main (void)
   /* Store pointers to all widgets, for use by lookup_widget(). */
   GLADE_HOOKUP_OBJECT_NO_REF (window_main, window_main, "window_main");
   GLADE_HOOKUP_OBJECT (window_main, fixed5, "fixed5");
-  GLADE_HOOKUP_OBJECT (window_main, label22, "label22");
-  GLADE_HOOKUP_OBJECT (window_main, label_install, "label_install");
   GLADE_HOOKUP_OBJECT (window_main, image8, "image8");
   GLADE_HOOKUP_OBJECT (window_main, notebook1, "notebook1");
   GLADE_HOOKUP_OBJECT (window_main, fixed6, "fixed6");
@@ -560,6 +560,8 @@ create_window_main (void)
   GLADE_HOOKUP_OBJECT (window_main, image14, "image14");
   GLADE_HOOKUP_OBJECT (window_main, label21, "label21");
   GLADE_HOOKUP_OBJECT (window_main, label17, "label17");
+  GLADE_HOOKUP_OBJECT (window_main, label22, "label22");
+  GLADE_HOOKUP_OBJECT (window_main, label_install, "label_install");
   GLADE_HOOKUP_OBJECT_NO_REF (window_main, tooltips, "tooltips");
 
   return window_main;
